# vbase-api-py

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE.txt  NOTICE.txt  README.md  pyproject.toml  requirements-private.in  requirements.in
.github/: publish-pypi.yml
.github/actions/setup-python-deps/: action.yml
.github/workflows/: documentation-publishing.yml  file-integrity-e2e.yml  publish-pypi.yml  python-dependency-locks.yml
agents/memory/: MEMORY.md
docs/: README.md  conf.py  index.rst  vbase_api_client.rst  vbase_api_models.rst
internal/agents/memory/: MEMORY.md
internal/specs/: e2e-file-integrity.md  github-actions.md  python-dependency-hashes.md
ops/scripts/: btenv.py  btenv.sh
requirements/: README.md
requirements/lock/: docs.txt  e2e.txt  tools.txt
requirements/src/: docs.in  e2e.in
specs/: github-actions.md
src/vbase-api/: vbase_api_client.py
src/vbase_api/: __init__.py  vbase_api_client.py  vbase_api_models.py
src/vbase_api_py/: vbase_api_client.py  vbase_api_models.py
tests/: __init__.py  test_file_integrity_e2e.py
