[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "vbase-api-py"          # This is the name on PyPI
version = "0.1.3"            # Must match __version__ above for now
description = "vBase REST API Python Client"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "requests>=2.32.5"
]
license = "Apache-2.0"
authors = [
  { name = "vBase", email = "tech@vbase.com" }
]

keywords = ["vbase", "stamping", "web3", "blockchain", "validation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/validityBase/vbase-api-py"
Documentation = "https://docs.vbase.com/"

# This tells setuptools where to find the code
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]